# Scribe-Ledger

./: .dockerignore  .gitignore  BOSS_SUMMARY.md  CHANGELOG.md  CLUSTER_TESTING_GUIDE.md  CODE_REVIEW_SUMMARY.md  COMPLETE_BENCHMARK_REFACTORING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FINAL_TEST_REPORT.md  HTTP_BENCHMARK_LINEAR_SCALING_FIX.md  LICENSE  MONITORING.md  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE3_CONSENSUS_SUMMARY.md  README.md  RENAME_SUMMARY.md  SUMMARY.md  TASKS_6.2_6.3_IMPLEMENTATION_SUMMARY.md  TASK_2.3_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3.3_3.4_SUMMARY.md  TASK_3.5_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4.3_SUMMARY.md  TASK_4_SUMMARY.md  TASK_5.1_SUMMARY.md  TASK_5.2_5.3_SUMMARY.md  TASK_6.1_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION.md  TASK_8.1_IMPLEMENTATION_SUMMARY.md  TASK_8.2_8.3_IMPLEMENTATION_SUMMARY.md  TEST_RESULTS_SUMMARY.md  config-dev.toml  config-local.toml  config-node1.toml  config-node2.toml  (+9 more)
benches/: archival_benchmark.rs  async_storage_benchmark.rs  crypto_benchmark.rs  http_benchmark.rs  s3_storage_benchmark.rs  simple_http_benchmark.rs  storage_benchmark.rs
docker/: README.md
docs/: ARCHIVAL_TIERING.md  COMPLETE_BENCHMARK_REFACTORING.md  CONFIGURATION.md  DEPLOYMENT.md  FIXES.md  HTTP_BATCHING_REFACTOR.md  HTTP_OPTIMIZATION_FINAL.md  OPERATIONS.md  OPTIMIZATION_SUMMARY.md  S3_AND_DISCOVERY_FIXES.md  S3_STORAGE.md  TASKS_6.2_6.3_IMPLEMENTATION_SUMMARY.md  TASK_10.1_IMPLEMENTATION_SUMMARY.md  TASK_10.2_10.3_IMPLEMENTATION_SUMMARY.md  TASK_11.1_11.2_IMPLEMENTATION_SUMMARY.md  TASK_11.3_IMPLEMENTATION_SUMMARY.md  TASK_11.4_11.5_IMPLEMENTATION_SUMMARY.md  TASK_6.1_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TASK_8.2_8.3_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  WINDOWS.md
example_data/: db  snap.00000000000000B2
examples/: basic_usage.rs  cli_store.rs  config_demo.rs  data_types.rs
optimized_demo_db/: db
scripts/: start-cluster.sh  stop-cluster.sh  test-3node-cluster-docker-s3.sh  test-3node-cluster-s3.sh  test-cluster.sh
src/: api.rs  async_storage_ops.rs  cache.rs  cluster.rs  config.rs  crypto.rs  discovery.rs  error.rs  http_client.rs  json_ops.rs  lib.rs  logging.rs  main.rs  metrics.rs  monitoring.rs  network.rs  types.rs  (+1 more)
(+60 files in other folders)
