[package]
name = "simple-scribe-ledger"
version = "0.1.0"
edition = "2021"
default-run = "simple-scribe-ledger"

[dependencies]
sled = "0.34"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "storage_benchmark"
harness = false

[[bench]]
name = "async_storage_benchmark"
harness = false

[[bench]]
name = "http_benchmark"
harness = false

[[bench]]
name = "simple_http_benchmark"
harness = false

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "data_types" 
path = "examples/data_types.rs"

[[example]]
name = "cli_store"
path = "examples/cli_store.rs"

[[example]]
name = "config_demo"
path = "examples/config_demo.rs"
